# Fydor-language-app

./: .claudeignore  .codexignore  .env.example  .env.production  .gitignore  AGENTS.md  LICENSE  LOG.md  MIGRATION_LOG.md  README.md  UPDATE_PLAN_FOR_LLM.md  drizzle.config.ts  eslint.config.mjs  index.html  initial instruction.txt  korean-starter-course.fydorpack  next.config.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts
.pglite-data/: postmaster.pid
app/: error.tsx  global-error.tsx  globals.css  layout.tsx  page.tsx
components/: AppShell.tsx  ServiceWorker.tsx
db/: schema.ts
docs/: annotated-sentence-highlight.md  audio-and-tooltips.md  codex-context-map.md  contributor-pipeline.md  fydor-next-implementation-plan.md  language-learning-implementation-log.md  lesson-import-system.md  product-audit-2026-07.md  releasing-v4.md  review-architecture.md  review-system.md  security-release-audit-2026-07.md  v4-release-audit.md
lib/: communityApi.ts  desktopApi.ts  dom.ts  errors.ts  fydor-pack.ts  public-library.ts  safeJson.ts  speech.ts  storage.ts  studyScope.ts  webOrigin.ts
packs/: .curriculum-korean.json  .curriculum-spanish.json  german-beginner-v1.json  (+7 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/frontend-dist/: index.html
src-tauri/src/: annotations.rs  app_updates.rs  curriculum.rs  db.rs  external_links.rs  lessons.rs  main.rs  models.rs  normalize.rs  pack_export.rs  packs.rs  public_library.rs  reading.rs  review.rs  settings.rs
src-tauri/src/lessons/: import.rs  mod.rs  read.rs
(+227 files in other folders)
