[package]
name = "fydor"
version = "4.0.0"
description = "A language learning app"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["custom-protocol"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
unicode-normalization = "0.1"
uuid = { version = "1", features = ["v4"] }
tauri-plugin-opener = "2"
rfd = { version = "0.10", default-features = false, features = ["xdg-portal"] }
url = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
auto-updates = ["dep:tauri-plugin-updater"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = { version = "2", optional = true }
